# waitbus

./: .gitattributes  .gitignore  .lycheeignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  LICENSE  NOTICE  README.md  ROADMAP.md  SECURITY.md  SKILL.md  SUPPORT.md  TODO.md  context7.json  flake.nix  llms.txt  pyproject.toml  pyrightconfig.json  release-please-config.json  server.json
.claude-plugin/: plugin.json
.github/: CODEOWNERS  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: bench.yml  ci.yml  dogfood-wait.yml  lychee.yml  quality-advisory.yml  release-please.yml  release.yml  security-scan.yml  soak-smoke.yml  soak.yml  stress-gate.yml
adapters/: README.md
adapters/waitbus-langgraph/: README.md  pyproject.toml
adapters/waitbus-langgraph/src/waitbus_langgraph/: __init__.py  _nodes.py
adapters/waitbus-langgraph/tests/: conftest.py  test_nodes_e2e.py
adapters/waitbus-pydantic-ai/: README.md  pyproject.toml
adapters/waitbus-pydantic-ai/src/waitbus_pydantic_ai/: __init__.py  _tools.py
adapters/waitbus-pydantic-ai/tests/: test_tools_e2e.py
benchmarks/: BENCHMARKING.md  CANONICAL_VERSIONS.toml  HAWKES_SENSITIVITY.md  __init__.py  _bench_anchor.py  _bench_ci_producer_swarm.py  _bench_llm_agent_pool.py  _bench_preflight.py  _bench_shared.py  _bench_source_mix.py  _bench_swarm.py  _harness.py  _source_taxonomy.py  bench_daemon_per_delivery_cost.py  bench_event_delivery_fidelity.py  bench_idle_rss.py  bench_multistream_proof.py  bench_notify_to_wake.py  bench_polling_baseline_docker.py  bench_polling_baseline_fs.py  bench_polling_baseline_fs_inotifywait.py  bench_polling_baseline_github.py  bench_polling_baseline_pytest.py  bench_polling_vs_subscribe_llm_agent.py  bench_predicate_eval_latency_multi.py  bench_predicate_wait_under_mixed_load.py  bench_throughput.py  bench_tokens_saved.py  bench_ttfae_docker.py  bench_ttfae_first_match.py  bench_ttfae_fs.py  bench_ttfae_github.py  bench_ttfae_pytest.py  gen_corpus.py  poll_cost_derivation.json
benchmarks/baselines/: bench_event_delivery_fidelity_20260606.json  bench_multistream_proof_20260606.json  bench_polling_vs_subscribe_llm_agent_20260607.json  cross_host_variance.json  idle_rss.json  notify_to_wake.json  pinned_images.json  polling_baseline_docker.json  polling_baseline_fs.json  polling_baseline_fs_inotifywait.json  polling_baseline_github.json  polling_baseline_pytest.json  predicate_eval_latency_multi.json  predicate_wait_under_mixed_load.json  throughput.json  tokens_saved.json  ttfae_docker.json  ttfae_first_match.json  ttfae_fs.json  ttfae_github.json  ttfae_pytest.json  waitbus_stress_real_20260607.json
benchmarks/data/: NOTICE  gh_distributions.toml  sensitivity-results.json
benchmarks/setup/: pin_nats_image.sh
docs/: AGENT_MESSAGING.md  ARCHITECTURE.md  COMPETITIVE_LANDSCAPE.md  COMPLEXITY.md  CONSUMER_API.md  CUSTOM_SOURCES.md  DEPENDENCY_LICENSES.md  EXIT_CODES.md  LOGGING_CONVENTIONS.md  README.md  ROBUSTNESS_TESTS.md  SOAK_TEST.md  STRATEGY.md  architecture.mmd
docs/demo/: README.md  docker-compose.yml  pyproject.toml
docs/demo/.github/workflows/: longrunning.yml  matrix.yml
docs/demo/.waitbus-demo/: Makefile  README.md  demo.tape  hero.tape
docs/demo/docker-demo/worker/: Dockerfile
docs/demo/src/: __init__.py
docs/demo/tests/: test_demo.py
docs/demo/watched-dir/: README.md
docs/emitters/: claude-code-hook.md  recipes.md
docs/monitoring/: waitbus-grafana.md
docs/release/: branch-protection.sh
examples/custom_source_plugin/: LICENSE  README.md  pyproject.toml
examples/custom_source_plugin/src/waitbus_circleci/: __init__.py  plugin.py
scripts/: __init__.py  _hetzner_provision_lib.sh  capture_baselines.sh  coverage_per_file.py  derive_gh_distributions.py  derive_poll_costs.py  dogfood_emit_synthetic.py  gen_mcp_constants.py  honker-upstream-probe.sh  run_adapter_tests.sh  run_bench_b_on_hetzner.sh  run_delivery_fidelity_on_hetzner.sh  run_full_pytest.sh  run_soak_on_hetzner.sh  sdist_test_pairing.py  sensitivity_sweep.py  soak_monitor.py  sync-versions.py
systemd/: MANIFEST.txt  waitbus-broadcast.service  waitbus-broadcast.socket  waitbus-common.conf  waitbus-etag-poll.service  waitbus-etag-poll.timer  waitbus-forward@.service  waitbus-listener.service  waitbus-watchdog.service  waitbus-watchdog.timer
tests/: _agent_harness.py  _daemon_helpers.py  _subscriber_harness.py  _webhook_redactor.py  _wire_helpers.py  conftest.py  test_addressed_messaging.py  test_agent_integration_langgraph.py  test_agent_integration_pydantic_ai.py  test_artifact_hygiene.py  test_attestation.py  test_await_predicate_characterization.py  test_bench_anchor.py  test_bench_ci_producer_swarm.py  test_bench_daemon_per_delivery_cost.py  test_bench_event_delivery_fidelity.py  test_bench_helper_adoption.py  test_bench_llm_agent_pool.py  test_bench_multistream_proof.py  test_bench_pilot_skip_contract.py  test_bench_polling_vs_subscribe_llm_agent.py  test_bench_preflight.py  test_bench_shared.py  test_bench_source_mix.py  test_bench_swarm.py  test_broadcast.py  test_broadcast_exception_mapping.py  test_broadcast_robustness.py  test_broadcast_sub.py  test_cli.py  test_cli_allowlist.py  test_cli_completion.py  test_cli_demo.py  test_cli_demo_decoders.py  test_cli_emit.py  test_cli_on.py  test_cli_serve.py  test_cli_sources.py  test_cli_stats.py  test_cli_stress.py  (+128 more)
waitbus/: __init__.py  __init__.pyi  _broadcast_sub.py  _cloudevents.py  _columns.py  _compose.py  _config.py  _db.py  _doorbell.py  _duration.py  _emit.py  _frame.py  _http.py  _log.py  _mcp_constants.py  _mcp_models.py  _mcp_subscriptions.py  _messaging.py  _metrics.py  _metrics_http.py  _paths.py  _peercred.py  _predicate.py  _protocols.py  _sdnotify.py  _secrets.py  _subscribe.py  _terminal.py  _types.py  _ulid.py  _untrusted.py  _version.py  broadcast.py  broadcast_tap.py  coalesce.py  config_validate.py  etag_poll.py  events_analyze.py  events_query.py  listener.py  (+10 more)
(+114 files in other folders)
